# FACTORS

./: .dockerignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml
.github/workflows/: ci.yml  docker-ci.yml
configs/: global.yaml
configs/ablations/: design_balanced.yaml  design_skewed.yaml  risk_lambda_sweep.yaml  shrinkage_high.yaml  shrinkage_low.yaml  shrinkage_mid.yaml
configs/datasets/: car.yaml  concrete.yaml  fmnist.yaml
configs/runs/: main.yaml  sanity.yaml
data/: README.md
docker/: Dockerfile.cpu  Dockerfile.gpu  README.md  compose.dev.cpu.yml  compose.dev.gpu.yml  entrypoint.sh
envs/: conda-cpu.yml  conda-gpu.yml  pip-cpu.txt  pip-gpu.txt
experiments/: README.md
notebooks/: README.md
results/: README.md
scripts/: check_env.py  download_data.sh  make_tables_figs.py  reproduce_all.sh  run_experiment.py
src/factors/: __init__.py  bootstrap.py  effects.py  io.py  optimizer.py  pci.py  score.py  shap_fit.py  utils.py
tests/integration/: test_end_to_end_sanity.py
tests/unit/: test_effects.py  test_optimizer.py  test_score.py  test_shap_fit.py
