# pyproject.toml for FACTORS repository
# Minimal, TOML-valid configuration compatible with Python 3.10-3.12

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "factors"
version = "0.1.0"
description = "Factorial Approximation for Complementary Two-factor Optimization with Risk Scoring (FACTORS)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Dongseok Kim" },
  { name = "Wonjun Jeong" },
  { name = "Gisung Oh" }
]
requires-python = ">=3.10,<3.13"
keywords = ["Design of Experiments", "Explainable AI", "Factorial Design", "Shapley Values", "Uncertainty Quantification"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "pyyaml>=6.0",
  "tqdm>=4.64",
  "joblib>=1.2",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "requests>=2.28",
  "shap>=0.41"
]

[project.optional-dependencies]
cpu = [
  "torch>=2.0 ; platform_system != 'Darwin'",
  "torchvision>=0.15 ; platform_system != 'Darwin'"
]
gpu = [
  "torch>=2.0",
  "torchvision>=0.15"
]
dev = [
  "black>=24.1",
  "ruff>=0.20",
  "isort>=5.12",
  "pre-commit>=3.4",
  "pytest>=7.3",
  "pytest-cov>=4.0",
  "sphinx>=6.2",
  "myst-parser>=0.19"
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "N"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --maxfail=1"
testpaths = ["tests"]
